Fixed date and time picker not readable in daa design

--- a/src/main/resources/static/assets/css/groups/globalStyles-daa.css
+++ b/src/main/resources/static/assets/css/groups/globalStyles-daa.css
@@ -13,3 +13,9 @@ body:not(p, li) {
 a {
   color: lightblue;
 }
+
+.timepicker-hour, .timepicker-minute, .timepicker-hours .hour, .timepicker-minutes .minute,
+.picker-switch, .datepicker-months .next:not(.disabled), .datepicker-months .prev:not(.disabled), .datepicker-months .month:not(.disabled),
+.datepicker-years .next:not(.disabled), .datepicker-years .prev:not(.disabled), .datepicker-years .year:not(.disabled) {
+  color: #5bc0de;
+}
